<resources>
    <string name="app_name">lr_1_kotlin</string>
    <string name="login_form">Login</string>
    <string name="login_form_username">Username</string>
    <string name="login_form_password">Password</string>
    <string name="logo_1">Diet</string>
    <string name="logo_2">App</string>
    <string name="back">Logout</string>
    <string name="calc_form">Calculate BZHU</string>
    <string name="calc_form_age">Age</string>
    <string name="calc_form_height">Height</string>
    <string name="calc_form_weight">Weight</string>
    <string name="calc_form_gender">Male/Female</string>
    <string name="calc_form_sport">Sport</string>
    <string name="calc_form_calculate">Calculate</string>
    <string name="proteins">Proteins: </string>
    <string name="fats">Fats: </string>
    <string name="carbohydrates">Carbohydrates: </string>
    <string name="calories">Calories: </string>
</resources>