<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculate_bzhu">

    <TextView
        android:id="@+id/logo_"
        android:layout_width="67dp"
        android:layout_height="41dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/logo_1"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo_3"
        android:layout_width="67dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/logo_2"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/logo_"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="back"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <Switch
        android:id="@+id/switchGender"
        android:layout_width="125dp"
        android:layout_height="67dp"
        android:layout_marginStart="24dp"
        android:text="@string/calc_form_gender"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumberAge"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberHeight"
        app:layout_constraintTop_toTopOf="@+id/editTextNumberAge" />

    <EditText
        android:id="@+id/editTextNumberAge"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/calc_form_age"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_3" />

    <EditText
        android:id="@+id/editTextNumberHeight"
        android:layout_width="200dp"
        android:hint="@string/calc_form_height"
        android:layout_height="49dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberAge" />

    <EditText
        android:id="@+id/editTextNumberWeight"
        android:hint="@string/calc_form_weight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberHeight" />

    <CheckBox
        android:id="@+id/checkBoxSport"
        android:layout_width="128dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:text="@string/calc_form_sport"
        app:layout_constraintStart_toStartOf="@+id/switchGender"
        app:layout_constraintTop_toBottomOf="@+id/switchGender" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="413dp"
        android:layout_height="62dp"
        android:fontFamily="@font/montserrat"
        android:rotation="0"
        android:text="@string/calc_form"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/calc_form_age"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberAge"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberAge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/calc_form_height"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberHeight"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberHeight" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/calc_form_weight"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberWeight"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberWeight" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="64dp"
        android:onClick="calculate"
        android:text="@string/calc_form_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/checkBoxSport"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSport" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="201dp"
            android:layout_height="234dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textProteins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/proteins"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textFats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/fats"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textCarbohydrates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/carbohydrates"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/calories"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="208dp"
            android:layout_height="234dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textProteinsCalc"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textFatsCalc"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textCarbohydratesCalc"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textCaloriesCalc"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:text=""
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>